--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,14 +1,15 @@
 {% extends '_base.html' %}
+{% load crispy_forms_filters %}
 
 {% block page_title %}
     Signup
 {% endblock %}
 
 {% block content %}
-    <div class="container mt-3 text-bg-info col-lg-6 p-4">
+    <div class="container text-bg-info mt-3 text-bg-info col-lg-6 p-4">
         <form action="" method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form|crispy }}
             <button class="btn btn-success text-left" type="submit">Signup</button>
         </form>
     </div>
