--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -2,16 +2,15 @@
 {% load crispy_forms_filters %}
 
 {% block page_title %}
-    Signup
+    Change Password
 {% endblock %}
 
 {% block content %}
-    <div class="container text-bg-info mt-3 text-bg-info col-lg-6 p-4">
-        <form action="" method="post">
+    <div class="container text-bg-info mt-3 text-bg-info col-lg-6 p-3">
+        <form class="m-3" action="" method="post">
             {% csrf_token %}
             {{ form|crispy }}
             <button class="btn btn-success text-left" type="submit">Signup</button>
         </form>
-        <a href="{% url 'login' %}">Login</a>
     </div>
 {% endblock %}
