--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -10,5 +10,5 @@
         <p>{{ book.author }}</p>
         <br>
     {% endfor %}
-    
+    <a href="{% url 'book_create' %}">اضافه کردن کتاب جدید</a>
 {% endblock content %}
