--- a/books/templates/books/book_update.html
+++ b/books/templates/books/book_update.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 
-{% block page_title %}ایجاد کتاب جدید{% endblock page_title %}
+{% block page_title %}ویرایش کتاب {{ book.title }} {% endblock page_title %}
 
 
 {% block content %}
@@ -8,7 +8,7 @@
         <form action="" method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" value="ایجاد">
+            <input type="submit" value="ذخیره">
         </form>
         <br>
         <a href="{% url 'book_list' %}">لیست تمامی کتاب ها</a>
