--- a/books/templates/books/book_delete.html
+++ b/books/templates/books/book_delete.html
@@ -1,14 +1,14 @@
 {% extends '_base.html' %}
 
-{% block page_title %}ایجاد کتاب جدید{% endblock page_title %}
+{% block page_title %}حذف کتاب {{ book.title }} {% endblock page_title %}
 
 
 {% block content %}
     <div class="container col-9 m-4 p-2 bg-info">
         <form action="" method="post">
             {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="ایجاد">
+            <h1>آیا میخواد کتاب "{{ book.title }}" حذف شود </h1><br>
+            <input type="submit" class="btn btn-danger" value="حذف کتاب">
         </form>
         <br>
         <a href="{% url 'book_list' %}">لیست تمامی کتاب ها</a>
