--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-
+    <br>
     <h1>{{ book.title }}</h1>
     <p>{{ book.author }}</p>
     <p>{{ book.description }}</p>
@@ -14,7 +14,10 @@
     <p>{{ book.year_of_publication }}</p>
     <p>{{ book.number_of_pages }}</p>
     <p>{{ book.language }}</p>
-
+    <br>
+    <a href="{% url 'book_update' book.id %}"><button type="button" class="btn btn-info">ویرایش</button></a>
+    <a href="{% url 'book_delete' book.id %}"><button type="button" class="btn btn-danger">حذف</button></a>
+    <br>
     <a href="{% url 'book_list' %}">لیست کتاب ها</a>
 
 {% endblock content %}
